tests/errors/lex_int2.java
public class lex_int2 {
	int a = 2147483647;
	int b = -2147483647;
	int c = 2147483648;
}
